welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:17: error: illegal start of simple expression
	}
        ^