welcome.lessons.welcome.array.maxvalue.Extrema.scala.code
def extrema(nums:Array[Int]): Int = {
	var max = 0
	var min = 0
	var c =0

	for ( c <- 0 to nums.length -1)
	{
		if (nums(c) > max)
		{
			max = nuùs(c)
		}
		else if (nums (c) < min)
		{
			min = nums (c)
		}
		else
	}
	return max - min
}
